More overflow fixing?
Changed 2 lines this time!!

--- a/styles.css
+++ b/styles.css
@@ -106,7 +106,7 @@ body {
   z-index: 100;
   visibility: hidden;
   display: flex;
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100%;
   align-self: center;
@@ -123,7 +123,7 @@ body {
   z-index: 99;
   visibility: hidden;
   display: flex;
-  position: absolute;
+  position: fixed;
   width: 50%;
   height: 80%;
   align-self: center;
